--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "cprg",
+        "logomark",
+        "noopener",
+        "noreferrer",
+        "Sahilpreet",
         "Sandhu",
         "turbopack"
     ]
